<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestResource">

    <ScrollView
        android:id="@+id/scroll_resource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menuInferior"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/main_container_resource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_resource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="9dp"
                android:padding="10dp"
                android:text="@string/form_resource"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/row1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="end"
                        android:padding="8dp"
                        android:text="@string/category"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/cbCategory"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/row2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtDependency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="end"
                        android:padding="8dp"
                        android:text="@string/dependency"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/cbBuildings"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/row3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtResource"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="end"
                        android:padding="8dp"
                        android:text="@string/request_resource"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/cbSpaceType"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/row4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtQuanty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="end"
                        android:padding="8dp"
                        android:text="@string/quantity"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edtQuanty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="6"
                        android:inputType="number"/>
                </TableRow>

                <LinearLayout
                    android:id="@+id/row5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="1dp">

                    <EditText
                        android:id="@+id/edtEventStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="6"
                        android:focusable="false"
                        android:hint="@string/event_start"
                        android:inputType="date" />

                    <ImageButton
                        android:id="@+id/ibEventStart"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_date"
                        android:onClick="getDateButton"/>

                    <EditText
                        android:id="@+id/edtTimeStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="6"
                        android:hint="@string/time_start"
                        android:inputType="time" />

                    <ImageButton
                        android:id="@+id/ibTimeStart"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_time"
                        android:onClick="getTimeButton"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="1dp">

                    <EditText
                        android:id="@+id/edtEventEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="6"
                        android:focusable="false"
                        android:hint="@string/event_end"
                        android:inputType="date" />

                    <ImageButton
                        android:id="@+id/ibEventEnd"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_date"
                        android:onClick="getDateButton"/>

                    <EditText
                        android:id="@+id/edtTimeEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="6"
                        android:hint="@string/time_end"
                        android:inputType="time" />

                    <ImageButton
                        android:id="@+id/ibTimeEnd"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_time"
                        android:onClick="getTimeButton"/>
                </LinearLayout>

            </TableLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="18dp"
                android:padding="3dp"
                android:text="@string/create" />
        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/menuInferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimaryLight"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_inferior"/>

</RelativeLayout>